port common to 1.21.4